<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/dim_all"
    tools:context=".MainActivity">


    <TextView
        android:textSize="@dimen/dim_title"
        android:gravity="center"
        android:text="@string/connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/login" />

    <EditText

        android:id="@+id/txtPassword"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>

    <Button
        android:id="@+id/btnConnect"
        android:backgroundTint="@color/green"
        android:layout_marginLeft="@dimen/dim_left"
        android:layout_marginRight="@dimen/dim_right"
        android:layout_marginTop="@dimen/dim_top"
        android:text="@string/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnsignUp"
        android:layout_marginTop="@dimen/dim_top"
        android:backgroundTint="@color/blue"
        android:layout_marginLeft="@dimen/dim_left"
        android:layout_marginRight="@dimen/dim_right"
        android:text="@string/SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>